fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -25,7 +25,7 @@ html {
 
 .icon {
     position: absolute;
-    left: 0;
+    left: 5px;
 }
 
 li div {
